k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-api-service
  labels:
    app: sample-api
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: sample-api
